Working REST Server with multiple gRPC services
